feat: 新增开通会员页面交互
